# bastion

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: README.md  agent-safety-patterns.md  bastion-prd.md  integration-playbook.md  threat-model.md
examples/: bastion.toml
src/bastion/: approvals.py  budgets.py  classifier.py  cli.py  config.py  gateway.py  models.py  policy.py  store.py  telegram.py
tests/: test_bastion.py
